fix: P4PU-1091 updated PagedDebtorUnpaidDebtPositionMapper to filter paymentOptions (#487)