@@ -1,28 +1,41 @@
 package it.gov.pagopa.pu.debtpositions.mapper;
 
+import it.gov.pagopa.pu.debtpositions.citizen.service.DataCipherService;
+import it.gov.pagopa.pu.debtpositions.dto.BasePaymentOption;
 import it.gov.pagopa.pu.debtpositions.dto.DebtorDebtPositionDTO;
+import it.gov.pagopa.pu.debtpositions.dto.generated.InstallmentStatus;
 import it.gov.pagopa.pu.debtpositions.dto.generated.PagedDebtorUnpaidDebtPositionDTO;
+import it.gov.pagopa.pu.debtpositions.dto.generated.PaymentOptionStatus;
 import it.gov.pagopa.pu.debtpositions.model.DebtPosition;
 import it.gov.pagopa.pu.debtpositions.model.DebtPositionTypeOrg;
+import it.gov.pagopa.pu.debtpositions.model.InstallmentNoPII;
+import it.gov.pagopa.pu.debtpositions.model.PaymentOption;
 import it.gov.pagopa.pu.debtpositions.util.TestUtils;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mapstruct.factory.Mappers;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import uk.co.jemos.podam.api.PodamFactory;
 
-import java.util.List;
-import java.util.Map;
+import java.time.LocalDate;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@ExtendWith(MockitoExtension.class)
 class PagedDebtorUnpaidDebtPositionMapperTest {
 
-  private final PagedDebtorUnpaidDebtPositionMapper mapper =
-    Mappers.getMapper(PagedDebtorUnpaidDebtPositionMapper.class);
+  @Mock
+  private DataCipherService dataCipherServiceMock;
+
+  private final PagedDebtorUnpaidDebtPositionMapper mapper = Mappers.getMapper(PagedDebtorUnpaidDebtPositionMapper.class);
 
   private final PodamFactory podam = TestUtils.getPodamFactory();
+
 
   @Test
   void givenValidPageAndMapWhenMapThenReturnValidDTO() {
@@ -34,20 +47,23 @@ class PagedDebtorUnpaidDebtPositionMapperTest {
     typeOrg.setDescription("TYPE_DESCRIPTION");
 
     Map<Long, DebtPositionTypeOrg> map = Map.of(10L, typeOrg);
+    byte[] hashedDebtorFiscalCode = {1, 2, 3};
 
     Page<DebtPosition> page =
       new PageImpl<>(List.of(dp), PageRequest.of(0, 1), 1);
 
     // when
-    PagedDebtorUnpaidDebtPositionDTO result = mapper.map(page, map);
+    PagedDebtorUnpaidDebtPositionDTO result =
+      mapper.map(page, map, hashedDebtorFiscalCode);
 
     // then
     assertNotNull(result);
     assertEquals(1, result.getContent().size());
 
-    DebtorDebtPositionDTO dto = result.getContent().get(0);
-    assertEquals(dp.getDebtPositionId(), dto.getDebtPositionId());
+    DebtorDebtPositionDTO dto = result.getContent().getFirst();
+    assertEquals(10L, dto.getDebtPositionId());
     assertEquals("TYPE_DESCRIPTION", dto.getDebtPositionTypeOrgDescription());
+
     TestUtils.checkNotNullFields(result);
     result.getContent().forEach(TestUtils::checkNotNullFields);
   }
@@ -58,7 +74,8 @@ class PagedDebtorUnpaidDebtPositionMapperTest {
     Page<DebtPosition> emptyPage = new PageImpl<>(List.of());
 
     // when
-    PagedDebtorUnpaidDebtPositionDTO result = mapper.map(emptyPage, null);
+    PagedDebtorUnpaidDebtPositionDTO result =
+      mapper.map(emptyPage, Map.of(), null);
 
     // then
     assertNotNull(result);
@@ -86,17 +103,77 @@ class PagedDebtorUnpaidDebtPositionMapperTest {
       2L, t2
     );
 
-    List<DebtPosition> list = List.of(dp1, dp2);
+    byte[] hashedDebtorFiscalCode = {1, 2, 3};
 
     // when
-    List<DebtorDebtPositionDTO> result = mapper.map(list, typeMap);
+    List<DebtorDebtPositionDTO> result =
+      mapper.map(List.of(dp1, dp2), typeMap, hashedDebtorFiscalCode);
 
     // then
     assertEquals(2, result.size());
     assertEquals("DESC1", result.get(0).getDebtPositionTypeOrgDescription());
     assertEquals("DESC2", result.get(1).getDebtPositionTypeOrgDescription());
-    result.forEach(
-      TestUtils::checkNotNullFields
+
+    result.forEach(TestUtils::checkNotNullFields);
+  }
+
+  @Test
+  void givenTwoPaymentOptionsWithDifferentDebtorsWhenMapThenOnlyCorrectOneIsKept() {
+    // given
+    byte[] correctHash = {1, 2, 3};
+    byte[] wrongHash = {9, 9, 9};
+
+    InstallmentNoPII correctInstallment = InstallmentNoPII.builder()
+      .status(InstallmentStatus.UNPAID)
+      .debtorFiscalCodeHash(correctHash)
+      .dueDate(LocalDate.now())
+      .build();
+
+    InstallmentNoPII wrongInstallment = InstallmentNoPII.builder()
+      .status(InstallmentStatus.UNPAID)
+      .debtorFiscalCodeHash(wrongHash)
+      .dueDate(LocalDate.now().plusDays(1))
+      .build();
+
+    PaymentOption validPo = PaymentOption.builder()
+      .paymentOptionIndex(1)
+      .status(PaymentOptionStatus.UNPAID)
+      .installments(new TreeSet<>(Set.of(correctInstallment)))
+      .build();
+
+    PaymentOption invalidPo = PaymentOption.builder()
+      .paymentOptionIndex(2)
+      .status(PaymentOptionStatus.UNPAID)
+      .installments(new TreeSet<>(Set.of(wrongInstallment)))
+      .build();
+
+    DebtPosition dp = DebtPosition.builder()
+      .debtPositionId(1L)
+      .paymentOptions(new TreeSet<>(Set.of(validPo, invalidPo)))
+      .build();
+
+    Page<DebtPosition> page = new PageImpl<>(List.of(dp));
+
+    // when
+    PagedDebtorUnpaidDebtPositionDTO result =
+      mapper.map(page, Map.of(), correctHash);
+
+    // then
+    DebtorDebtPositionDTO dto = result.getContent().getFirst();
+
+    assertEquals(1, result.getContent().getFirst().getPaymentOptions().size());
+
+    BasePaymentOption remainingPo = dto.getPaymentOptions().getFirst();
+
+    assertEquals(
+      1,
+      remainingPo.getInstallments().size());
+
+    Collection<InstallmentNoPII> installments = (Collection<InstallmentNoPII>) remainingPo.getInstallments();
+
+    assertArrayEquals(
+      correctHash,
+      installments.stream().findFirst().get().getDebtorFiscalCodeHash()
     );
 
   }
@@ -110,15 +187,17 @@ class PagedDebtorUnpaidDebtPositionMapperTest {
     Page<DebtPosition> page = new PageImpl<>(List.of(dp));
 
     // when
-    PagedDebtorUnpaidDebtPositionDTO result = mapper.map(page, null);
+    PagedDebtorUnpaidDebtPositionDTO result = mapper.map(page, null, null);
 
     // then
     assertNotNull(result);
     assertEquals(1, result.getContent().size());
-    assertNull(result.getContent().getFirst().getDebtPositionTypeOrgDescription());
+    assertNull(
+      result.getContent().getFirst().getDebtPositionTypeOrgDescription()
+    );
 
     result.getContent().forEach(
-     dpr -> TestUtils.checkNotNullFields(dpr,"debtPositionTypeOrgDescription")
+      dpr -> TestUtils.checkNotNullFields(dpr, "debtPositionTypeOrgDescription")
     );
   }
 }
